# libhybris-sample

android/: .gitignore
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: hello-jni.c
android/app/src/main/java/com/kevinread/hellojni/: HelloJni.java
android/app/src/main/res/layout/: activity_hello_jni.xml
linux/: Dockerfile
linux/sources/: pom.xml
linux/sources/cpp/: CMakeLists.txt  hellojni.c
linux/sources/src/main/java/com/kevinread/hellojni/: HelloJni.java  Main.java
